# codescan

./: .pylintrc  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_ci.txt
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codescan_ci.yml  release-publish.yml
core/: providers.py  runner.py
core/code_scanner/: code_scanner.py
core/providers/: base_ai_provider.py  custom_ai_provider.py  google_gemini_ai_provider.py  open_ai_provider.py
core/utils/: argument_parser.py  code_summary_extractor.py  file_extractor.py  provider_creator.py
core_test/: providers_test.py
core_tests/: code_scanner_test.py  providers_test.py  runner_test.py  utils_test.py
